# nixconf

./: .gitattributes  .gitignore  .luarc.json  AGENTS.md  LICENSE  PLAN.md  README.md  binary-cache-prompt.md  build_config.json  build_flags.json  catppuccin-userstyles.json  check-7-2.nu  dirac.nix  flake.nix  home.nix  main.py  new_system.nu  nixvim.nix  overlays.nix  pyproject.toml  substituters_config.json  treefmt.nix
.githooks/: pre-commit
.pi/: README.md
.zed/: settings.json
android/: nix-on-droid.nix
home/: alacritty.nix  android.nix  btop.nix  chromium.nix  codex.nix  default.nix  defaults.nix  firefox.nix  gh.nix  git.nix  helix.nix  home.nix  hyprland.nix  lazygit.nix  nvim.nix  nvim_pager.sh  op.nix  secrets.nix  shell.nix  spotify-player.nix  ssh-git.nix  ssh.nix  theme.nix  tty.nix  utils.nu  vcs-settings.nix  vesktop.nix  zed.nix
modules/: base.nix  displaymanager.nix  hyprland.nix  kde.nix  kwallet.nix  laptop.nix  nvidia.nix  remote-desktop.nix  server.nix  windowmanager.nix  wm.nix
nixconf_audio/: __init__.py
pkgs/: amd-container-runtime.nix  amd-ctk.nix  aquamarine-no-forced-color-state-on-modeset.patch  codex.nix  hyprland-focus-monitor-after-warp.patch  hyprland-lua-monitor-disabled-false.patch  hyprland-reset-monitor-format-on-rule.patch  hyprland-upstream.nix  hyprpy.nix  linear-cli.nix  nh-cachix.nix  nu_plugin_toon.nix  protobuf-language-server.nix  t3code.nix  tdx-clipboard-linux.patch  topiary-nushell.nix  xhisper-local.nix
tests/: test_archive.py  test_hyprmonitor_config.py  test_nixconf_audio.py
xhisper-local/: Makefile  (+6 more)
(+152 files in other folders)
