[project]
name = "nixconf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.2.1",
  "gitpython>=3.1.46",
  "hyprpy>=0.2.0",
  "textual>=7.5.0"
]

[tool.ruff]
line-length = 79

[tool.ty.environment]
python = ".venv"
